[gd_scene load_steps=2 format=3 uid="uid://dj4av6o7415lh"]

[ext_resource type="Script" path="res://Prog122i.gd" id="1_h1efj"]

[node name="Prog122i" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1efj")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1148.0
offset_bottom = 465.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 522.0
offset_right = 254.0
offset_bottom = 647.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 520.0
offset_right = 714.0
offset_bottom = 645.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 525.0
offset_right = 1149.0
offset_bottom = 650.0
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
